--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.10.0",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
   }
